docs: document run scenarios, PySpark port and MERGE tuning
Expand the README to match the modernized project.

- Document the unified key=value arguments and the three run scenarios
  (local, local on S3/S3 Tables, EMR on S3/S3 Tables), the Iceberg v3
  tables, the Spark 4.0 JVM --add-opens options, and the emr-spark-8.0.0
  release details.
- Add a section describing the PySpark port under python/.
- Add "Notes on the MERGE pattern" to the CDC section: the dedup + MERGE
  mirror flow, restricting affected partitions in the ON clause (with the
  hourly-partition example that prunes to the two latest partitions),
  tuning commit retries, enabling partial progress on rewrite_data_files,
  and expiring old metadata files via write.metadata.* properties.