@@ -14,15 +14,74 @@ The example uses maven profiles to automatically filter required libraries when 
 
 **Environment types:** 
 
-- Local development using a [dockerized Kafka](https://github.com/bitnami/containers/blob/main/bitnami/kafka/).
-- Local development against Amazon S3, and AWS Glue Catalog, here we will also use the dockerized Kafka.
-- Production mode where we can deploy the code to an Amazon EMR Serverless cluster.
+All three scenarios run from the same jar and the same class — you just change the order-independent
+`key=value` arguments (see [Run configuration and unified arguments](#run-configuration-and-unified-arguments)):
+
+- Local development using a [dockerized Kafka](docker-compose.yml) (the official `apache/kafka`
+  image in KRaft mode), a Hadoop file catalog under `./warehouse` (`catalog=local`).
+- Local development (still `runtime=local`, great for debugging) writing to Amazon S3 through the
+  AWS Glue Data Catalog (`catalog=glue`) or to an Amazon S3 Tables managed bucket
+  (`catalog=s3tables`), with the dockerized or a remote Kafka.
+- Production on Amazon EMR / EMR Serverless (`runtime=emr`) with `catalog=glue` or
+  `catalog=s3tables`, on release label `emr-spark-8.0.0` (Spark 4.0.2, Scala 2.13, Iceberg 1.10.1).
 
 You can run these examples on any Spark compatible runtime too, but that's for a pull request ( if you like to contribute).
 
 In the case of Amazon Web Services on AWS Glue, Amazon EMR or Amazon EMR Serverless.
 æ
 Remember also that these jobs and code can be adapted for **batch mode** easily (and remember that you can use Kafka as batch source!). A batch job is just a special streaming job with a start and an end anyway.
+
+### Run configuration and unified arguments
+
+Every Spark example shares a single, self-documenting configuration helper
+(`com.aws.emr.common.JobConfig`). Instead of relying on the number of positional arguments, all
+jobs now take order-independent `key=value` arguments, so the same jar and the same class can run in
+any of the three supported scenarios just by changing the arguments:
+
+```
+runtime=local|emr           where Spark runs (default: local -> master local[*]; emr -> inferred)
+catalog=local|glue|s3tables Iceberg catalog / storage (default: local)
+warehouse=<path|s3 uri|arn> catalog warehouse (default 'warehouse' for local;
+                            an s3://... URI for glue; the table bucket ARN for s3tables)
+checkpoint=<path|s3 uri>    structured streaming checkpoint dir (default: tmp/)
+bootstrap=<host:port,...>   Kafka bootstrap servers (default: localhost:9092)
+descriptor=<path>           protobuf descriptor file (default: Employee.desc)
+avro=<path>                 Avro .avsc schema file (default: ./src/main/avro/Employee.avsc)
+dedup=true|false            enable deduplication (default: false)
+compaction=true|false       enable periodic/async compaction (default: false)
+shuffle=<n>                 spark.sql.shuffle.partitions initial value; AQE coalesces (default: 200 local / 800 cloud)
+region=<aws-region>         Glue Schema Registry region (SparkProtoRegistry only, default eu-west-1)
+```
+
+The three run scenarios map to arguments as follows:
+
+1. **Local development** (Hadoop file catalog under `./warehouse`, Kafka on `localhost:9092`) — run
+   with no arguments, or just toggle behaviour, e.g. `dedup=true compaction=true`.
+2. **Local Spark on top of Amazon S3 / S3 Tables** — keep `runtime=local` (great for debugging with
+   breakpoints) but store the data in the cloud:
+   - S3 via the AWS Glue Data Catalog:
+     `catalog=glue warehouse=s3://your-bucket/warehouse checkpoint=s3://your-bucket/checkpoint bootstrap=...`
+   - Amazon S3 Tables (managed Iceberg):
+     `catalog=s3tables warehouse=arn:aws:s3tables:<region>:<account>:bucket/<table-bucket> checkpoint=s3://your-bucket/checkpoint bootstrap=...`
+     For local S3 Tables runs you must also put the S3 Tables catalog client on the classpath, for
+     example by adding
+     `--conf spark.jars.packages=software.amazon.s3tables:s3-tables-catalog-for-iceberg-runtime:0.1.8`
+     (it is a `provided` dependency in the build so it is not shaded into the jar).
+3. **Amazon EMR on S3 / S3 Tables** — set `runtime=emr` so the master is inferred from the cluster,
+   and pick `catalog=glue` or `catalog=s3tables` with the appropriate `warehouse`. On
+   `emr-spark-8.0.0` the Iceberg and S3 Tables runtimes are provided by EMR.
+
+You need valid AWS credentials on your machine for the `glue` and `s3tables` catalogs when running
+locally (the standard AWS credential chain is used).
+
+### A note on Iceberg v3 tables
+
+All of the examples create their tables as **Apache Iceberg format-version 3 (v3)** tables
+(`'format-version'='3'` in the `TBLPROPERTIES`). Iceberg v3 became production ready with Apache
+Iceberg 1.11.0 and brings, among other things, deletion vectors (used automatically by the
+merge-on-read examples instead of v2 positional delete files), row lineage, the VARIANT type,
+default column values, nanosecond timestamps and multi-argument partition transforms. The
+merge-on-read jobs therefore write more efficient row-level deletes out of the box on v3.
 
 ### A note on performance
 
@@ -38,6 +97,40 @@ Another cool thing to test is to use Avro for the ingestion tables and then comp
 A good doc to read about these settings and more can be seen on the [Best Practices for Optimizing Apache Iceberg workloads](https://docs.aws.amazon.com/prescriptive-guidance/latest/apache-iceberg-on-aws/best-practices.html) from AWS Documentation.
 
 Another good read can be seen on this blog from Cloudera: [Optimization Strategies for Iceberg Tables](https://blog.cloudera.com/optimization-strategies-for-iceberg-tables/)
+
+## PySpark alternative (`python/`)
+
+A complete **PySpark** counterpart of these examples lives in the [`python/`](python/) folder,
+managed with [`uv`](https://docs.astral.sh/uv/). Every Spark job here is replicated in Python, uses
+the **same unified `key=value` arguments** and the same three run scenarios (local, local on
+S3/S3 Tables, and EMR on S3/S3 Tables), and creates the same **Iceberg format-version 3 (v3)**
+tables. The shared `com.aws.emr.common.JobConfig` helper is mirrored by
+`iceberg_streaming.common.jobconfig`, which additionally wires up `spark.jars.packages` so that
+local runs pull the Kafka/Avro/Protobuf connectors and the Iceberg 4.0 / S3 Tables runtimes from
+Maven Central (on EMR those are provided by the runtime).
+
+Quick start:
+
+```bash
+cd python
+uv sync                       # Python 3.12 + PySpark 4.0.2 + deps
+uv run iot-custom-ingest      # pure local dev (hadoop catalog, kafka on localhost:9092)
+# local Spark on S3 via Glue:
+uv run iot-custom-ingest catalog=glue warehouse=s3://your-bucket/warehouse bootstrap=broker:9092 dedup=true
+# on EMR (master inferred from the cluster):
+#   spark-submit ... iceberg_streaming/iot/spark_custom_iceberg_ingest.py runtime=emr catalog=glue warehouse=s3://...
+```
+
+Console entry points exist for every job (`iot-mor`, `proto-native`, `proto-udf`, `avro-native`,
+`cdc-log-change`, `cdc-mirror`, `cdc-incremental`, the `iot-s3buckets-*` variants, `iceberg-utils`)
+plus native Kafka producers/consumers (`proto-producer`, `avro-producer`, `json-producer`,
+`cdc-simulator`, `proto-consumer`, `avro-consumer`). See [`python/README.md`](python/README.md) for
+the full table, setup, protobuf-binding generation and troubleshooting.
+
+Differences from the Java project: the AWS Glue Schema Registry clients (including the
+`SparkProtoRegistry` Spark consumer) are **not** ported — there is no first-class Python Glue Schema
+Registry serde and that deserializer is JVM-only, so use the Java jobs for the Glue Schema Registry
+scenarios. The JSON example is a plain native JSON producer/consumer.
 
 ## IoT Scenarios
 
@@ -67,6 +160,7 @@ If you want to use the GlueSchemaRegistry you should create in the console a str
 - AWS Glue Registry based Java Producer/Consumer.
 - Native Spark Structured streaming consumer. 
 - UDF based Spark Structured streaming consumer.
+- AWS Glue Schema Registry based Spark Structured streaming consumer (`SparkProtoRegistry`).
 
 Create a schema for the Glue registry ```Employee.proto``` if you like to use the Registry based producer/consumer:
 
@@ -170,9 +264,110 @@ The relevant classes are withing the ```com.aws.emr.spark.cdc``` package.
  * ```SparkCDCMirror``` class is a Spark batch pipeline that process the MERGE using the Mirror approach.
  * ```SparkIncrementalPipeline``` class uses Incremental pipeline for consuming the CDC changelog into a target table. 
 
+### Notes on the MERGE pattern
+
+The mirror approach is a `MERGE INTO`. We first deduplicate the changelog keeping the latest change
+per key with a windowed `row_number()`, then merge that single row per key into the target table.
+The three `WHEN` branches map the CDC operation to a row-level action: a `D` on a matched key becomes
+a `DELETE`, any other matched key is an `UPDATE`, and a new key that is not a delete is an `INSERT`.
+On the v3 `merge-on-read` target the deletes are written as deletion vectors, so the merge stays
+cheap on the write path. This is the core of `SparkCDCMirror`:
+
+```sql
+WITH windowed_changes AS (
+    SELECT account_id, balance, last_updated, operation,
+           row_number() OVER (PARTITION BY account_id ORDER BY last_updated DESC) AS row_num
+    FROM accounts_changelog WHERE last_updated > current_timestamp() - INTERVAL 1 DAY
+),
+accounts_changes AS (SELECT * FROM windowed_changes WHERE row_num = 1)
+MERGE INTO accounts_mirror a USING accounts_changes c
+ON a.account_id = c.account_id
+WHEN MATCHED AND c.operation = 'D' THEN DELETE
+WHEN MATCHED THEN UPDATE SET a.balance = c.balance, a.last_updated = c.last_updated
+WHEN NOT MATCHED AND c.operation != 'D' THEN
+    INSERT (account_id, balance, last_updated) VALUES (c.account_id, c.balance, c.last_updated)
+```
+
+#### Restrict the affected partitions in the `ON` clause
+
+The most important knob for MERGE performance is limiting how much of the *target* table Spark has to
+scan and rewrite. A join predicate on the join key alone (`ON a.account_id = c.account_id`) forces
+Spark to consider the whole target. If you know your incoming batch only touches recent data (late
+events at most a couple of hours old, for example), add a predicate on the partition column to the
+`ON` clause so Iceberg can prune to just those partitions. `SparkCustomIcebergIngest` does exactly
+this against the `employee` table, which is partitioned by `hours(start_date)`:
+
+```sql
+MERGE INTO bigdata.employee as t
+USING insert_data as s
+ON  `s`.`employee_id` = `t`.`employee_id`
+    AND `t`.`start_date` > current_timestamp() - INTERVAL 1 HOURS
+    AND `t`.`team` = 'Solutions Architects' AND `t`.`start_date` = `s`.`start_date`
+WHEN NOT MATCHED THEN INSERT *
+```
+
+Because the table is bucketed hourly, `t.start_date > current_timestamp() - INTERVAL 1 HOURS` prunes
+the target down to just the two latest hourly partitions (the current hour plus the previous one)
+instead of the entire table. Adapt the interval and the partition predicate to your own late-arrival
+window and partitioning. If you partition by bucket, you can restrict the merge to specific buckets
+in the same way (`t.employee_id IN (...)` per bucket, or by materialising a bucket column and joining
+on it) — see the inline comments in `SparkCustomIcebergIngest` for the trade-offs.
+
+#### Tune commit retries
+
+Streaming writes, periodic compaction and late-arriving MERGEs all commit against the same table with
+optimistic concurrency, so commit conflicts are expected under load. Give Iceberg enough retries and
+back-off in the table properties so a losing commit is retried instead of failing the job:
+
+```
+'commit.retry.num-retries'='10',   -- number of times to retry a commit before failing
+'commit.retry.min-wait-ms'='250',  -- minimum back-off before retrying a commit
+'commit.retry.max-wait-ms'='60000' -- (1 min) maximum back-off before retrying a commit
+```
+
+#### Enable partial progress on compaction
+
+When you compact from inside the streaming job you are competing with the writer for commits. Run
+`rewrite_data_files` with `partial-progress.enabled = true` so the rewrite commits in several smaller
+batches (bounded by `partial-progress.max-commits`) rather than one big all-or-nothing commit. That
+way a conflict only loses the current group, progress made so far is kept, and this is also why the
+commit retries above matter. `SparkCustomIcebergIngest` triggers this every 10 batches, scoped to the
+recent partitions:
+
+```sql
+CALL system.rewrite_data_files(
+  table => 'employee',
+  strategy => 'sort',
+  sort_order => 'start_date',
+  where => 'start_date >= current_timestamp() - INTERVAL 1 HOURS', -- only compact recent partitions
+  options => map(
+    'rewrite-job-order','bytes-asc',
+    'target-file-size-bytes','273741824',
+    'max-file-group-size-bytes','10737418240',
+    'partial-progress.enabled', 'true',
+    'partial-progress.max-commits', '10',
+    'max-concurrent-file-group-rewrites', '10000'
+  ))
+```
+
+#### Expire old metadata files automatically
+
+Every commit writes a new table `metadata.json`, and with a fast streaming trigger these pile up
+quickly and slow down planning. Let Iceberg clean them up on each commit by setting these table
+properties, so you keep only a bounded number of previous metadata versions instead of an
+ever-growing list:
+
+```
+'write.metadata.delete-after-commit.enabled' = 'true', -- remove old metadata files after each commit
+'write.metadata.previous-versions-max' = '50'          -- keep at most 50 previous metadata.json versions
+```
+
+Snapshot and orphan-file expiration are a separate concern and are best left to a dedicated
+maintenance job over older partitions.
+
 ## Requirements
 
-* Java 17 + ( you could adapt this code easily to run on Java 8 or Java 11)
+* Java 17 or 21 (Apache Spark 4.0 dropped support for Java 8 and Java 11; Java 17 is the default and recommended runtime)
 * Maven 3.9+
 * 16GB of RAM and more than 2 cores. 
 * Whatever IDE you like ([Intellij](https://www.jetbrains.com/intellij/), [Visual Studio Code](https://code.visualstudio.com/), [NetBeans](https://apache.netbeans.org/), etc)
@@ -201,7 +396,7 @@ Package your application using the ```emr``` Maven profile, then upload the jar 
  
 Create a Database in the AWS Glue Data Catalog with the name ```bigdata```.
 
-You need to create an EMR Serverless application with ```default settings for batch jobs only```, application type ```Spark``` release version ```7.2.0``` and ```x86_64``` as architecture, enable ```Java 17``` as runtime, enable ```AWS Glue Data Catalog as metastore```
+You need to create an EMR Serverless application with ```default settings for batch jobs only```, application type ```Spark``` release version ```emr-spark-8.0.0``` (this release ships Apache Spark 4.0.2, Scala 2.13 and Apache Iceberg 1.10.1; note the release label is ```emr-spark-8.0.0```, not ```emr-8.0.0```) and ```x86_64``` as architecture, enable ```Java 17``` as runtime, enable ```AWS Glue Data Catalog as metastore```
 integration and enable ```Cloudwatch logs``` if desired.
 
 Then you can issue a job run using this aws cli command. Remember to change the desired parameters.
@@ -211,8 +406,8 @@ aws emr-serverless start-job-run     --application-id application-identifier    
 	'{
         "sparkSubmit": {
             "entryPoint": "s3://s3bucket/jars/streaming-iceberg-ingest-1.0-SNAPSHOT.jar",
-            "entryPointArguments": ["true","s3a://s3bucket/warehouse","/home/hadoop/Employee.desc","s3a://s3bucket/checkpoint","kafkaBootstrapString","true"],
-            "sparkSubmitParameters": "--class com.aws.emr.spark.iot.SparkCustomIcebergIngest --conf spark.executor.cores=4 --conf spark.hadoop.hive.metastore.client.factory.class=com.amazonaws.glue.catalog.metastore.AWSGlueDataCatalogHiveClientFactory --conf spark.executor.memory=16g  --conf spark.driver.cores=2 --conf spark.driver.memory=8g  --files s3a://s3bucket/Employee.desc --conf spark.dynamicAllocation.minExecutors=4 --conf spark.jars=/usr/share/aws/iceberg/lib/iceberg-spark3-runtime.jar --conf spark.emr-serverless.executor.disk.type=shuffle_optimized --packages org.apache.spark:spark-sql-kafka-0-10_2.12:3.5.1"
+            "entryPointArguments": ["runtime=emr","catalog=glue","warehouse=s3a://s3bucket/warehouse","descriptor=/home/hadoop/Employee.desc","checkpoint=s3a://s3bucket/checkpoint","bootstrap=kafkaBootstrapString","dedup=true","compaction=true"],
+            "sparkSubmitParameters": "--class com.aws.emr.spark.iot.SparkCustomIcebergIngest --conf spark.executor.cores=4 --conf spark.hadoop.hive.metastore.client.factory.class=com.amazonaws.glue.catalog.metastore.AWSGlueDataCatalogHiveClientFactory --conf spark.executor.memory=16g  --conf spark.driver.cores=2 --conf spark.driver.memory=8g  --files s3a://s3bucket/Employee.desc --conf spark.dynamicAllocation.minExecutors=4 --conf spark.jars=/usr/share/aws/iceberg/lib/iceberg-spark3-runtime.jar --conf spark.emr-serverless.executor.disk.type=shuffle_optimized --packages org.apache.spark:spark-sql-kafka-0-10_2.13:4.0.2"
         }
     }'
 {	
@@ -234,8 +429,10 @@ You can also see the cluster autoscaling into action:
 4. Use the IDE to issue the ```package ``` command of maven selecting the local profile.
 5. If you wish to use the AWS Glue Data Catalog and S3 remember to have the corresponding permissions (have your AWS credentials avaliable), there are plugins for both [Intellij](https://aws.amazon.com/intellij/?pg=developertools) and [Visual Studio Code](https://aws.amazon.com/visualstudiocode/) that can be helpful here.
 6. Start the local Kafka broker via ```docker-compose up``` command.
-7. Run the examples with the desired arguments, remember that you will need to add the required VM options for letting Spark to work on Java 17: 
+7. Run the examples with the desired arguments. Apache Spark 4.0 runs on Java 17 (or 21) and, because of the Java Module System, it needs a set of `--add-opens`/`--add-modules` start options to avoid `InaccessibleObjectException` / "unnamed module" access errors. Add the following VM options to your IDE run configuration (this is the exact default set that `spark-submit` injects for you via `org.apache.spark.launcher.JavaModuleOptions`, so you only need them for local runs launched directly from the IDE):
 ```
+-XX:+IgnoreUnrecognizedVMOptions
+--add-modules=jdk.incubator.vector
 --add-opens=java.base/java.lang=ALL-UNNAMED
 --add-opens=java.base/java.lang.invoke=ALL-UNNAMED
 --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
@@ -245,16 +442,19 @@ You can also see the cluster autoscaling into action:
 --add-opens=java.base/java.util=ALL-UNNAMED
 --add-opens=java.base/java.util.concurrent=ALL-UNNAMED
 --add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED
+--add-opens=java.base/jdk.internal.ref=ALL-UNNAMED
 --add-opens=java.base/sun.nio.ch=ALL-UNNAMED
 --add-opens=java.base/sun.nio.cs=ALL-UNNAMED
 --add-opens=java.base/sun.security.action=ALL-UNNAMED
 --add-opens=java.base/sun.util.calendar=ALL-UNNAMED
 --add-opens=java.security.jgss/sun.security.krb5=ALL-UNNAMED
+-Djdk.reflect.useDirectMethodHandle=false
+-Dio.netty.tryReflectionSetAccessible=true
 ```
 
 ### Running the Kafka producer on AWS
 
-Create a Amazon MSK cluster with at leas two brokers using ```3.5.1```, [Apache Zookeeper](https://zookeeper.apache.org/) mode version and use as instance type ```kafka.m7g.xlarge```. Do not use public access and choose two private subnets to deploy it. For the security group remember that the EMR cluster and the EC2 based producer will need to reach the cluster and act accordingly. For security, use ```PLAINTEXT``` (in production you should secure access to the cluster). Choose ```200GB``` as storage size for each broker and do not enable ```Tiered storage```. For the cluster configuration use this one:
+Create a Amazon MSK cluster with at leas two brokers using a recent Apache Kafka version in [KRaft](https://kafka.apache.org/documentation/#kraft) mode (Apache Kafka 4.x removed ZooKeeper entirely, so KRaft is the only supported mode) and use as instance type ```kafka.m7g.xlarge```. Do not use public access and choose two private subnets to deploy it. For the security group remember that the EMR cluster and the EC2 based producer will need to reach the cluster and act accordingly. For security, use ```PLAINTEXT``` (in production you should secure access to the cluster). Choose ```200GB``` as storage size for each broker and do not enable ```Tiered storage```. For the cluster configuration use this one:
 
 ```
 auto.create.topics.enable=true
@@ -269,7 +469,6 @@ socket.receive.buffer.bytes=102400
 socket.request.max.bytes=104857600
 socket.send.buffer.bytes=102400
 unclean.leader.election.enable=true
-zookeeper.session.timeout.ms=18000
 compression.type=zstd
 log.retention.hours=2
 log.retention.bytes=10073741824
